examples/kafka/cluster/v1beta1/clusterpolicy.yaml
# SPDX-FileCopyrightText: 2025 The Crossplane Authors <https://crossplane.io>
#
# SPDX-License-Identifier: CC0-1.0

apiVersion: kafka.aws.upbound.io/v1beta1
kind: ClusterPolicy
metadata:
  annotations:
    meta.upbound.io/example-id: kafka/v1beta1/clusterpolicy
  labels:
    testing.upbound.io/example-name: example
  name: example-test-cluster-policy
spec:
  forProvider:
    clusterArnSelector:
      matchLabels:
        testing.upbound.io/example-name: example
    policy: |
      {
        "Version": "2012-10-17",
        "Statement": [
          {
            "Sid": "ExampleMskClusterPolicy",
            "Effect": "Allow",
            "Principal": {
              "AWS": "*"
            },
            "Action": [
              "kafka:Describe*",
              "kafka:Get*",
              "kafka:CreateVpcConnection",
              "kafka:GetBootstrapBrokers"
            ],
            "Resource": "*"
          }
        ]
      }
    region: us-east-2
